[package]
name = "rate-limit-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
