[package]
name = "rate-limit-testing"
version = "0.1.1"
edition = "2021"
description = "Intended to be used for testing rate-limiting"
authors = ["james@koonts.net"]
license = "MIT"
repository = "https://github.com/helloimalemur/rate-limit-testing"
keywords = ["rate-limit-testing"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
